<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_step_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/onboarding_setup_auth_title"
        android:textAppearance="?textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="@+id/lbl_step_subtitle"
        app:layout_constraintStart_toStartOf="@+id/lbl_step_subtitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_step_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/onboarding_setup_auth_subtitle"
        android:textAppearance="?textAppearanceHeadline4"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/lbl_step_title" />

    <fr.outadoc.quickhass.feature.onboarding.ui.ResultIconView
        android:id="@+id/view_token_result"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/onboarding_setup_auth_hint"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/view_token_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_step_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_token"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/onboarding_setup_auth_continue"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/lbl_auth_help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/onboarding_setup_auth_help"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue" />

    <TextView
        android:id="@+id/lbl_auth_help_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/onboarding_setup_auth_help_link"
        android:textAppearance="?textAppearanceBody2"
        android:textColor="@color/colorLink"
        app:layout_constraintEnd_toEndOf="@+id/lbl_auth_help"
        app:layout_constraintStart_toStartOf="@+id/lbl_auth_help"
        app:layout_constraintTop_toBottomOf="@+id/lbl_auth_help" />

</androidx.constraintlayout.widget.ConstraintLayout>