<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/lbl_step_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/onboarding_setup_shortcut_title"
        android:textAppearance="?textAppearanceHeadline5"
        app:layout_constraintBottom_toTopOf="@+id/lbl_step_subtitle"
        app:layout_constraintEnd_toEndOf="@+id/lbl_step_subtitle"
        app:layout_constraintStart_toStartOf="@+id/lbl_step_subtitle" />

    <TextView
        android:id="@+id/lbl_step_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/onboarding_setup_shortcut_subtitle"
        android:textAppearance="?textAppearanceHeadline4"
        app:layout_constraintBottom_toTopOf="@+id/txt_quick_settings_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_quick_settings_instructions" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:enabled="true"
        android:text="@string/onboarding_setup_shortcut_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txt_quick_settings_instructions"
        app:layout_constraintStart_toStartOf="@+id/txt_quick_settings_instructions"
        app:layout_constraintTop_toBottomOf="@+id/txt_quick_settings_instructions"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txt_quick_settings_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/onboarding_setup_shortcut_instructions"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>